<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="horizontal" 
    android:id="@+id/main_layout">
       
    <TextView android:id="@+id/enter_amount_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount_message"/>
    
	<EditText android:id="@+id/amount_raised_message"
	    android:layout_below="@+id/enter_amount_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_raised_message" 
        android:inputType="numberDecimal"/>
        
	<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/enter_amount_message"
        android:layout_toRightOf="@+id/amount_raised_message"
        android:text="@string/button_calculate" 
        android:onClick="sendMessage" />	
		
</RelativeLayout>
